# cadpilot

./: .env.sample  .gitignore  CLAUDE.md  pyproject.toml  start.sh
alembic/versions/: a1b2c3d4e5f6_add_deleted_at_to_jobs.py
backend/: config.py  main.py
backend/api/: export.py  generate.py  history.py  organic.py  preview.py  rag.py  standards.py
backend/benchmark/: comparator.py  runner.py
backend/core/: ast_checker.py  candidate_scorer.py  code_generator.py  correction_tracker.py  cost_optimizer.py  drawing_analyzer.py  format_exporter.py  gcode_parser.py  geometry_extractor.py  image_understanding.py  intent_parser.py  mesh_converter.py  ocr_assist.py  (+10 more)
cad3dify/: pipeline.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
scripts/: app.py  migrate_corrections.py  start-v3.sh  start.sh
tests/: conftest.py  test_api_health.py  test_api_v1.py  test_asset_store.py  test_ast_checker.py  test_benchmark_comparison.py  test_best_of_n.py  test_boolean_assemble.py  test_breakpoints.py  test_characterization.py  test_code_persistence.py  test_confirm_config.py  test_context.py  test_correction_tracker.py  test_cost_optimizer.py  test_cross_section.py  test_database.py  test_descriptor.py  test_drawing_analyzer.py  test_export_api.py  test_feature_model.py  test_finetune_integration.py  test_gear_involute.py  test_generate_api.py  test_generate_strategies.py  test_generation_nodes.py  test_geometry_extractor.py  test_graph_builder.py  test_graph_hitl.py  test_graph_nodes_analysis.py  test_graph_nodes_generation.py  test_graph_nodes_lifecycle.py  test_graph_nodes_postprocess.py  test_graph_timeout.py  test_history_api.py  test_hitl_integration.py  test_image_understanding.py  test_intent_model.py  test_intent_parser.py  test_knowledge_base.py  (+57 more)
(+325 files in other folders)
